travis ci deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,14 @@ before_install:
 script:
   - docker run -e CI=true yjk9805/docker-react-app npm run test -- --coverage
 
-after_success:
-  - echo "Test succes"
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "docker-react-app"
+  env: "Dockerreactapp-evn"
+  bucket_name: "elasticbeanstalk-us-east-1-075554249825"
+  bucket_path: "docker-react-app"
+  on:
+    branch: master
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_ACCESS_KEY
